--- a/clinicaA-WS/src/main/webapp/publico/clinicas.xhtml
+++ b/clinicaA-WS/src/main/webapp/publico/clinicas.xhtml
@@ -45,12 +45,9 @@
 					</h:column>
 					<h:column>
 						<f:facet name="header">Editar</f:facet>
-						<h:commandLink action="#{clinicaBean.editar}">
+						<h:commandLink action="clinica_edicao">
 							<h:graphicImage library="imagens" name="editar16.png" style="border:0" />
-							<f:setPropertyActionListener target="#{clinicaBean.clinica}" value="#{clinica}" />	
-							<f:setPropertyActionListener target="#{clinicaBean.clinicaServico}" 
-								value="#{clinica.clinicaServico}" />	
-							<f:setPropertyActionListener target="#{clinicaBean.visualizadorCodigo}" value="#{clinica.clinicaCliente.id}" />											
+							<f:setPropertyActionListener target="#{clinicaBean.clinica}" value="#{clinica}" />												
 						</h:commandLink>
 					</h:column>
 					<h:column>
