SA012 - Cadastro de Pacientes

--- a/clinicaA-WS/src/main/webapp/publico/menu_sistema.xhtml
+++ b/clinicaA-WS/src/main/webapp/publico/menu_sistema.xhtml
@@ -13,8 +13,9 @@
 			<tr>
 				<td>
 					<h:commandButton value="Exames" action="/publico/exames" />
-					<h:commandButton value="Clinicas" action="/publico/clinicas" />					
-				</td>
+					<h:commandButton value="Clinicas" action="/publico/clinicas" />
+					<h:commandButton value="Pacientes" action="/publico/pacientes" />
+				</td>				
 			</tr>
 		</table>
 	</h:form>
