--- a/clinicaA-WS/src/main/webapp/publico/clinicas.xhtml
+++ b/clinicaA-WS/src/main/webapp/publico/clinicas.xhtml
@@ -44,6 +44,10 @@
 						#{clinica.endereco}
 					</h:column>
 					<h:column>
+						<f:facet name="header">Código Externo</f:facet>
+						#{clinica.codigoExterno}
+					</h:column>
+					<h:column>
 						<f:facet name="header">Editar</f:facet>
 						<h:commandLink action="clinica_edicao">
 							<h:graphicImage library="imagens" name="editar16.png" style="border:0" />
