--- a/sistemaA/src/main/webapp/publico/clinicas.xhtml
+++ b/sistemaA/src/main/webapp/publico/clinicas.xhtml
@@ -52,7 +52,7 @@
 					</h:column>
 					<h:column>
 						<f:facet name="header">Editar</f:facet>
-						<h:commandLink action="#{clinicaBean.editar}">
+						<h:commandLink action="clinica_edicao">
 							<h:graphicImage library="imagens" name="editar16.png" style="border:0" />
 							<f:setPropertyActionListener target="#{clinicaBean.clinica}" value="#{clinica}" />	
 							<f:setPropertyActionListener target="#{clinicaBean.clinicaServico}" 
